Added tags to website links so they open in a new tab

--- a/events.html
+++ b/events.html
@@ -33,10 +33,10 @@
 
 	<div id="events_div">
 		<ul id="events_ul" type="none">
-			<li><a href="https://www.bandsintown.com/en?place_id=ChIJ1T-EnwNwcVMROrZStrE7bSY">Bandsintown Calgary</a></li>
-			<li><a href="https://www.bandsintown.com/en?place_id=ChIJI__egEUioFMRXRX2SgygH0E">Bandsintown Edmonton</a></li>
-			<li><a href="https://www.ticketmaster.ca/discover/concerts/calgary">Ticketmaster Calgary</a></li>
-			<li><a href="https://www.ticketmaster.ca/discover/concerts/edmonton">Ticketmaster Edmonton </a></li>
+			<li><a href="https://www.bandsintown.com/en?place_id=ChIJ1T-EnwNwcVMROrZStrE7bSY" rel="noopener noreferrer" target="_blank">Bandsintown Calgary</a></li>
+			<li><a href="https://www.bandsintown.com/en?place_id=ChIJI__egEUioFMRXRX2SgygH0E" rel="noopener noreferrer" target="_blank">Bandsintown Edmonton</a></li>
+			<li><a href="https://www.ticketmaster.ca/discover/concerts/calgary" rel="noopener noreferrer" target="_blank">Ticketmaster Calgary</a></li>
+			<li><a href="https://www.ticketmaster.ca/discover/concerts/edmonton" rel="noopener noreferrer" target="_blank">Ticketmaster Edmonton </a></li>
 		</ul>
 		<img id"event_img" src="images/concert-crowd.jpg" alt="Concert Crowd">
 	</div>
