--- a/storelocations.html
+++ b/storelocations.html
@@ -43,37 +43,37 @@
 			<tr>
 				<td>Left Handed Music Canada</td>
 				<td>230 Lakeshore Road East Mississauga, ON, L5G 1G9</td>
-				<td><a href="https://www.lamusic.com/collections/left-handed-electric"> Left Handed Music Canada </a></td>
+				<td><a href="https://www.lamusic.com/collections/left-handed-electric" rel="noopener noreferrer" target="_blank"> Left Handed Music Canada </a></td>
 				<td><img src="images/stores/lamusicstorepic.PNG" alt="Left Handed Music Canada Store"></td>
 			</tr>
 			<tr>
 				<td>Southpaw Guitars</td>
 				<td>5813 Bellaire Blvd. Houston, Texas 77081</td>
-				<td><a href="https://www.southpawguitars.com/"> Southpaw Guitars </a></td>
+				<td><a href="https://www.southpawguitars.com/" rel="noopener noreferrer" target="_blank"> Southpaw Guitars </a></td>
 				<td><img src="images/stores/southpawguitars.PNG" alt="Southpaw Guitars"></td>
 			</tr>
 			<tr>
 				<td>Long & McQuade Canada</td>
 				<td>225 58 Ave SE, Calgary, AB T2H 0N8</td>
-				<td><a href="https://www.long-mcquade.com/departments/96/Guitars/Left_Hand_Acoustics_Electrics.htm"> Long & McQuade Canada </a></td>
+				<td><a href="https://www.long-mcquade.com/departments/96/Guitars/Left_Hand_Acoustics_Electrics.htm" rel="noopener noreferrer" target="_blank"> Long & McQuade Canada </a></td>
 				<td><img src="images/stores/long&mcquade.PNG" alt="Long & McQuade"></td>
 			</tr>
 			<tr>
 				<td>Jerry's Lefty Guitars</td>
 				<td>Sarasota, Florida USA</td>
-				<td><a href="https://www.jerrysleftyguitars.com/"> Jerry's Lefty Guitars </a></td>
+				<td><a href="https://www.jerrysleftyguitars.com/" rel="noopener noreferrer" target="_blank"> Jerry's Lefty Guitars </a></td>
 				<td><img src="images/stores/jerrysguitars.PNG" alt="Jerry's Lefty Guitars"></td>
 			</tr>
 			<tr>
 				<td>Axe Music Canada</td>
 				<td>4114 Macleod Tr SE Calgary, AB T2G 2R7</td>
-				<td><a href="https://www.axemusic.com/departments/96/Guitars/Left_Hand_Acoustics_Electrics.htm"> Axe Music Canada </a></td>
+				<td><a href="https://www.axemusic.com/departments/96/Guitars/Left_Hand_Acoustics_Electrics.htm" rel="noopener noreferrer" target="_blank"> Axe Music Canada </a></td>
 				<td><img src="images/stores/axemusic.PNG" alt="Axe Music"></td>
 			</tr>
 			<tr>
 				<td>Extreme Lefty Guitars</td>
 				<td>4301 SW High Meadow Palm City, FL 34990</td>
-				<td><a href="https://xlguitars.com/"> Extreme Lefty Guitars </a></td>
+				<td><a href="https://xlguitars.com/" rel="noopener noreferrer" target="_blank"> Extreme Lefty Guitars </a></td>
 				<td><img src="images/stores/xlguitars.PNG" alt="Extreme Lefty Guitars"></td>
 			</tr>
 		</table>
