--- a/usefulresources.html
+++ b/usefulresources.html
@@ -31,9 +31,9 @@
 
 	<div id="resources_div">
 		<ul id="resources_ul" type="none">
-			<li><a href="https://www.yelp.ca/search?find_desc=guitar+lessons&find_loc=Calgary%2C+AB">Yelp for Lessons in Calgary</a></li>
-			<li><a href="http://guitarlessonscalgary.com/">Guitar Lessons in Calgary</a></li>
-			<li><a href="http://www.guitar-academy.com/">Guitar Academy Online</a></li>
+			<li><a href="https://www.yelp.ca/search?find_desc=guitar+lessons&find_loc=Calgary%2C+AB" rel="noopener noreferrer" target="_blank">Yelp for Lessons in Calgary</a></li>
+			<li><a href="http://guitarlessonscalgary.com/" rel="noopener noreferrer" target="_blank">Guitar Lessons in Calgary</a></li>
+			<li><a href="http://www.guitar-academy.com/" rel="noopener noreferrer" target="_blank">Guitar Academy Online</a></li>
 		</ul>
 		<iframe id="beginner_video" width="900" height="460" src="https://www.youtube.com/embed/LNS_m2IosVY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		<img id="chords" src="images/resources.png" alt="Guitar Chords">
