--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link href="css/styles.css" rel="stylesheet">
+	<link href="toplevelstyles.css" rel="stylesheet">
 </head>
 
 <h1>
