--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
 	<meta name="author" content="">
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
 	<link href="toplevelstyles.css" rel="stylesheet">
 </head>
 
 <h1>
-  Assignments
+  Assignments - Jordan Maisonneuve SENG 513
 </h1>
 
 <body>
