--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Jordan Maisonneuve - SENG 513 Assignments</title>
+	<title>Jordan Maisonneuve -Assignments</title>
 	<meta name="author" content="">
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,7 +11,7 @@
 </head>
 
 <h1>
-	Assignments - Jordan Maisonneuve SENG 513
+	Assignments - Jordan Maisonneuve
 </h1>
 
 <body>
