--- a/Assignment3/chat-app/index.html
+++ b/Assignment3/chat-app/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Socket.IO chat</title>
+    <title>Jordans - Socket IO ChatRoom!</title>
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box; }
       body { font: 13px Helvetica, Arial; }
