Started to add more messages for debugging and development

--- a/Assignment3/chat-app/index.html
+++ b/Assignment3/chat-app/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Jordans - Socket IO ChatRoom!</title>
+    <!-- todo: place this into a style sheet!-->
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box; }
       body { font: 13px Helvetica, Arial; }
