getting user list to work

--- a/Assignment3/index.html
+++ b/Assignment3/index.html
@@ -47,7 +47,7 @@
     <script src="/socket.io/socket.io.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
 
-    <script> //this is my client script
+    <script> //this is my client script -- put in its own file?
       $(function (){
 
       });
