Files getting ready for submission, added nickname feature and top display

--- a/Assignment3/index.html
+++ b/Assignment3/index.html
@@ -1,3 +1,5 @@
+<!--Jordan Maisonneuve 10153260 - B05 !-->
+
 <!doctype html>
 <html>
   <head>
@@ -13,20 +15,31 @@
       form input { border: 0; padding: 10px; width: 80%; margin-right: .5%; }
       form button { width: 18%; background: rgb(130, 224, 255); border: none; padding: 10px; }
 
-      #messages { list-style-type: none; margin: 0; padding: 0; height: 75%; overflow-y: scroll; border-style: solid; grid-column: 1; grid-row: 2; }
+      #messages { list-style-type: none;
+                  margin: 0; padding: 0; height: 400px;
+                  overflow-y: scroll;
+                  border-style: solid;
+                   }
+
       #messages li { padding: 5px 10px;  }
-      #messages li:nth-child(odd) { background: #eee; }
+      #messages li:nth-child(odd) { background: #eef; }
 
       #userLst {list-style-type: none; margin: 0; padding: 0; border-style: solid; grid-column: 2; }
       #userLst li { padding: 5px 10px; }
       #userLst li:nth-child(odd) { background: #eee; }
 
-      #userNameDisplay { font-size: 24px; grid-row: 1; padding-top: 10px; padding-left: 10px; padding-bottom: 10px; border-style: solid; border: 20px; border-color: black;}
+      .userNameDisp { font-size: 16px; grid-row: 1; padding-top: 10px; padding-left: 10px; padding-bottom: 10px; border-style: solid; border: 20px; border-color: black;}
 
-      div.msgScreen {
+      .grid-container {
         display: grid;
+        grid-column-gap: 5px;
+        grid-row-gap: 5px;
         grid-template-columns: 80% 20%;
         grid-template-rows: 5% 80% 15%;
+      }
+      .msgBox {
+        grid-column: 1;
+        grid-row: 2;
       }
 
       ul.userList {
@@ -36,8 +49,8 @@
     </style>
   </head>
   <body>
-    <div class="msgScreen">
-      <p id="userNameDisplay">Your username is "TBD"</p>
+    <div class="grid-container">
+      <p class="userNameDisp" id="userNameDisplay">Your username is .</p>
       <ul class="msgBox" id="messages"></ul>
       <ul class="userList" id="userLst"></ul>
       <form action="">
@@ -48,11 +61,6 @@
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
 
     <script> //this is my client script -- put in its own file?
-      $(function (){
-
-      });
-
-
       $(function () {
         var socket = io();
         $('form').submit(function(e){
@@ -70,6 +78,15 @@
 
         socket.on('user list update', function(usrList){
           $('#userLst').append($('<li>').text(usrList)); //TODO should not be append. - should overwrite.
+        });
+
+        socket.on('nickname color change', function(colorNumberRRGGBB){
+          $('#messages').css({'color': colorNumberRRGGBB});
+        });
+
+        socket.on('update top display', function(usrName){
+          $('#userNameDisplay').text('your username is ' + usrName);
+
         });
       });
     </script>
