added todolist and minor changes

--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -36,6 +36,19 @@
           //var element = document.getElementById('messages');
           //element.scrollTop = objDiv.scrollHeight;
         });
+
+        socket.on('user move', function(){
+          //
+        });
+
+        socket.on('create with code', function(){
+          //when user wants to create a game for their friend to join
+        });
+
+        socket.on('join random game', function(){
+          //when user wants to join a random game with someone in queue
+        });
+
       });
     </script>
   </body>
