--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -2,54 +2,228 @@
 
 <!doctype html>
 <html>
-  <head>
-    <title>Connect 4 - Link up!</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <style>
-    </style>
-  </head>
-  <body>
-    <div class="grid-container">
-      <p class="userNameDisp" id="userNameDisplay">HI</p>
-      <ul class="msgBox" id="messages"></ul>
-      <ul class="userList" id="userLst"></ul>
-      <form action="">
-        <input id="m" autocomplete="off" /><button>Send</button>
-      </form>
-    </div>
-    <script src="/socket.io/socket.io.js"></script>
+
+<head>
+  <title>Connect 4 - Link up!</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <style>
+    body {
+      margin: 0;
+      overflow: hidden;
+    }
+
+    canvas {
+      display: block;
+    }
+  </style>
+</head>
+
+<body>
+  <!--<script src="/socket.io/socket.io.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
+    !-->
+  <script>
+    "use strict";
 
-    <script> //this is my client script -- put in its own file?
-      $(function () {
-        var socket = io();
-        $('form').submit(function(e){
-          e.preventDefault(); // prevents page reloading
-          socket.emit('chat message', $('#m').val());
-          $('#m').val('');
-          return false;
-        });
+    //game parameters
+    const GRID_CIRCLE = 0.7;
+    const GRID_COLS = 7;
+    const GRID_ROWS = 6;
+    const MARGIN = 0.02;
 
-        socket.on('chat message', function(msg){
-          $('#messages').append($('<li>').text(msg));
-          //var element = document.getElementById('messages');
-          //element.scrollTop = objDiv.scrollHeight;
-        });
+    const COLOR_BACKGROUND = "mintcream";
+    const COLOR_P1 = "red";
+    const COLOR_P2 = "yellow";
+    const COLOR_FRAME = "blue";
 
-        socket.on('user move', function(){
-          //
-        });
+    // text
+    const TEXT_COMP = "Computer";
+    const TEXT_PLAY = "Player";
+    const TEXT_TIE = "DRAW";
+    const TEXT_WIN = "WINS!";
 
-        socket.on('create with code', function(){
-          //when user wants to create a game for their friend to join
-        });
+    //classes
+    class Cell {
+      constructor(left, top, w, h, row, col) {
+        this.bot = top + h;
+        this.left = left;
+        this.right = left + width;
+        this.top = top;
+        this.w = w;
+        this.h = h;
+        this.row = row;
+        this.col = col;
+        this.cx = left + width / 2;
+        this.cy = top + height / 2;
+        this.r = w * GRID_CIRCLE / 2;
+        this.owner = null;
+      }
 
-        socket.on('join random game', function(){
-          //when user wants to join a random game with someone in queue
-        });
+      contains(x, y) {
+        return x > this.left && x < this.right && y > this.top && y < this.bot;
+      }
+      
+      draw( /** @type {CanvasRenderingContext2D} */ ctx) {
 
+        // owner colour
+        let color = this.owner == null ? COLOR_BACKGROUND : this.owner ? COLOR_PLAY : COLOR_COMP;
+
+        // draw the circle
+        ctx.fillStyle = color;
+        ctx.beginPath();
+        ctx.arc(this.cx, this.cy, this.r, 0, Math.PI * 2);
+        ctx.fill();
+
+        // draw highlighting
+        if (this.winner || this.highlight != null) {
+
+          // colour
+          color = this.winner ? COLOR_WIN : this.highlight ? COLOR_PLAY : COLOR_COMP;
+
+          // draw a circle around the perimeter
+          ctx.lineWidth = this.r / 4;
+          ctx.strokeStyle = color;
+          ctx.beginPath();
+          ctx.arc(this.cx, this.cy, this.r, 0, Math.PI * 2);
+          ctx.stroke();
+        }
+      }
+    }
+    var canv = document.createElement("canvas");
+    document.body.appendChild(canv);
+    var ctx = canv.getContext("2d");
+
+    //game variables
+    var grid = [];
+    var height, width, margin;
+    setDimensions();
+
+    window.addEventListener("resize", setDimensions);
+
+    //game loop
+    var timeDelta, timeLast;
+    requestAnimationFrame(loop);
+
+    function loop(timeNow) {
+      if (!timeLast) {
+        timeLast = timeNow;
+      }
+      timeDelta = (timeNow - timeLast) / 1000;
+      timeLast = timeNow;
+
+
+      drawBackground();
+      drawGrid();
+
+      requestAnimationFrame(loop);
+    }
+
+    function drawBackground() {
+      ctx.fillStyle = COLOR_BACKGROUND;
+      ctx.fillRect(0, 0, width, height);
+    }
+
+    function drawGrid() {
+      //frame and butt
+      let cell = grid[0][0];
+      let fh = cell.h * GRID_ROWS;
+      let fw = cell.w * GRID_COLS;
+
+      ctx.fillStyle = COLOR_FRAME;
+      ctx.fillRect(cell.left, cell.top, fw, fh);
+
+
+      for (let row of grid) {
+        for (let cell of row) {
+          cell.draw(ctx);
+        }
+      }
+    }
+
+    function newGame() {
+      createGrid();
+    }
+
+    function createGrid() {
+      grid = [];
+
+      let cell, marginX, marginY;
+      //portrait
+      if ((width - margin * 2) * GRID_ROWS / GRID_COLS < height - margin * 2) {
+        cell = (width - margin * 2) / GRID_COLS;
+        marginX = margin;
+        marginY = (height - cell * GRID_ROWS) / 2;
+      } else {
+        cell = (height - margin * 2) / GRID_ROWS;
+        marginX = (width - cell * GRID_ROWS) / 2;
+        marginY = margin;
+      }
+
+
+
+      //landscape
+      for (let i = 0; i < GRID_ROWS; i++) {
+        grid[i] = [];
+        for (let j = 0; j < GRID_COLS; j++) {
+          let left = marginX + j * cell;
+          let top = marginY + i * cell;
+          grid[i][j] = new Cell()
+        }
+      }
+
+
+
+    }
+
+    function setDimensions() {
+      height = window.innerHeight;
+      width = window.innerWidth;
+      canv.height = height;
+      canv.width = width;
+      margin = MARGIN * Math.min(height, width);
+      newGame();
+    }
+    }
+
+
+
+
+
+
+
+
+
+    //this is my client script -- put in its own file?
+    /*$(function () {
+      var socket = io();
+      $('form').submit(function(e){
+        e.preventDefault(); // prevents page reloading
+        socket.emit('chat message', $('#m').val());
+        $('#m').val('');
+        return false;
       });
-    </script>
-  </body>
+
+      socket.on('chat message', function(msg){
+        $('#messages').append($('<li>').text(msg));
+        //var element = document.getElementById('messages');
+        //element.scrollTop = objDiv.scrollHeight;
+      });
+
+      socket.on('user move', function(){
+        //
+      });
+
+      socket.on('create with code', function(){
+        //when user wants to create a game for their friend to join
+      });
+
+      socket.on('join random game', function(){
+        //when user wants to join a random game with someone in queue
+      });
+
+    });*/
+  </script>
+</body>
+
 </html>
