Made it functional for 2 people to play client side connect 4

--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -25,29 +25,31 @@
     !-->
   <script>
   "use strict";
-
+  //TODO move this to server code.
       // game parameters
-      const DELAY_COMP = 0.5; // seconds for the computer to take its turn
+
       const GRID_CIRCLE = 0.7; // circle size as a fraction of cell size
       const GRID_COLS = 7; // number of game columns
       const GRID_ROWS = 6; // number of game rows
       const MARGIN = 0.02; // margin as a fraction of the shortest screen dimension
 
       // colours
-      const COLOR_BACKGROUND = "mintcream";
-      const COLOR_PLAY2 = "red";
-      const COLOR_PLAY2_DRK = "darkred";
-      const COLOR_FRAME = "dodgerblue";
+      const COLOR_BACKGROUND = "lightyellow";
+      const COLOR_FRAME = "#2641c9";
       const COLOR_FRAME_BUTT = "royalblue";
+
       const COLOR_PLAY1 = "yellow";
       const COLOR_PLAY1_DRK = "olive";
+      const COLOR_PLAY2 = "red";
+      const COLOR_PLAY2_DRK = "darkred";
+
       const COLOR_TIE = "darkgrey";
       const COLOR_TIE_DRK = "black";
       const COLOR_WIN = "black";
 
       // text
-      const TEXT_PLAY2 = "Computer";
-      const TEXT_PLAY1 = "Player";
+      const TEXT_PLAY1 = "Player 1";
+      const TEXT_PLAY2 = "Player 2";
       const TEXT_TIE = "DRAW";
       const TEXT_WIN = "WINS!";
 
@@ -108,7 +110,7 @@
       var ctx = canv.getContext("2d");
 
       // game variables
-      var gameOver, gameTied, grid = [], playersTurn, timeComp;
+      var gameOver, gameTied, grid = [], player1Turn, timeComp;
 
       // dimensions
       var height, width, margin;
@@ -132,9 +134,6 @@
           // calculate the time difference
           timeDelta = (timeNow - timeLast) / 1000; // seconds
           timeLast = timeNow;
-
-          // update
-          goComputer(timeDelta);
 
           // draw
           drawBackground();
@@ -178,23 +177,23 @@
           return connect4(diagL) || connect4(diagR) || connect4(horiz) || connect4(vert);
       }
 
+      //sub function to check the winner of each state for connect 4
       function connect4(cells = []) {
           let count = 0, lastOwner = null;
           let winningCells = [];
+          //for all of the cells in the array.
           for (let i = 0; i < cells.length; i++) {
 
-              // no owner, reset the count
+              // initialization w/ no owner reset count
               if (cells[i].owner == null) {
                   count = 0;
                   winningCells = [];
               }
-
               // same owner, add to the count
               else if (cells[i].owner == lastOwner) {
                   count++;
                   winningCells.push(cells[i]);
               }
-
               // new owner, new count
               else {
                   count = 1;
@@ -202,10 +201,9 @@
                   winningCells.push(cells[i]);
               }
 
-              // set the lastOwner
               lastOwner = cells[i].owner;
 
-              // four in a row is a win
+              // four wins
               if (count == 4) {
                   for (let cell of winningCells) {
                       cell.winner = true;
@@ -220,10 +218,6 @@
 
           if (gameOver) {
               newGame();
-              return;
-          }
-
-          if (!playersTurn) {
               return;
           }
 
@@ -292,17 +286,17 @@
 
           // set up text parameters
           let size = grid[0][0].h;
-          ctx.fillStyle = gameTied ? COLOR_TIE : playersTurn ? COLOR_PLAY1 : COLOR_PLAY2;
+          ctx.fillStyle = gameTied ? COLOR_TIE : player1Turn ? COLOR_PLAY1 : COLOR_PLAY2;
           ctx.font = size + "px dejavu sans mono";
           ctx.lineJoin = "round";
           ctx.lineWidth = size / 10;
-          ctx.strokeStyle = gameTied ? COLOR_TIE_DRK : playersTurn ? COLOR_PLAY1_DRK : COLOR_PLAY2_DRK;
+          ctx.strokeStyle = gameTied ? COLOR_TIE_DRK : player1Turn ? COLOR_PLAY1_DRK : COLOR_PLAY2_DRK;
           ctx.textAlign = "center";
           ctx.textBaseline = "middle";
 
           // draw the text
           let offset = size * 0.55;
-          let text = gameTied ? TEXT_TIE : playersTurn ? TEXT_PLAY1 : TEXT_PLAY2;
+          let text = gameTied ? TEXT_TIE : player1Turn ? TEXT_PLAY1 : TEXT_PLAY2;
           if (gameTied) {
               ctx.strokeText(text, width / 2, height / 2);
               ctx.fillText(text, width / 2, height / 2);
@@ -312,106 +306,6 @@
               ctx.strokeText(TEXT_WIN, width / 2, height / 2 + offset);
               ctx.fillText(TEXT_WIN, width / 2, height / 2 + offset);
           }
-      }
-
-      function goComputer(delta) {
-          if (playersTurn || gameOver) {
-              return;
-          }
-
-          // count down till the computer makes its selection
-          if (timeComp > 0) {
-              timeComp -= delta;
-              if (timeComp <= 0) {
-                  selectCell();
-              }
-              return;
-          }
-
-          // set up the options array
-          let options = [];
-          options[0] = []; // computer wins
-          options[1] = []; // block the player from winning
-          options[2] = []; // no significance
-          options[3] = []; // give away a win
-
-          // loop through each column
-          let cell;
-          for (let i = 0; i < GRID_COLS; i++) {
-              cell = highlightCell(grid[0][i].cx, grid[0][i].cy);
-
-              // column full, go to the next column
-              if (cell == null) {
-                  continue;
-              }
-
-              // first priority, computer wins
-              cell.owner = playersTurn;
-              if (checkWin(cell.row, cell.col)) {
-                  options[0].push(i);
-              } else {
-
-                  // second priority, block the player
-                  cell.owner = !playersTurn;
-                  if (checkWin(cell.row, cell.col)) {
-                      options[1].push(i);
-                  } else {
-                      cell.owner = playersTurn;
-
-                      // check the cell above
-                      if (cell.row > 0) {
-                          grid[cell.row - 1][cell.col].owner = !playersTurn;
-
-                          // last priority, let player win
-                          if (checkWin(cell.row - 1, cell.col)) {
-                              options[3].push(i);
-                          }
-
-                          // third priority, no significance
-                          else {
-                              options[2].push(i);
-                          }
-
-                          // deselect cell above
-                          grid[cell.row - 1][cell.col].owner = null;
-                      }
-
-                      // no row above, third priority, no significance
-                      else {
-                          options[2].push(i);
-                      }
-                  }
-              }
-
-              // cancel highlight and selection
-              cell.highlight = null;
-              cell.owner = null;
-          }
-
-          // clear the winning cells
-          for (let row of grid) {
-              for (let cell of row) {
-                  cell.winner = false;
-              }
-          }
-
-          // randomly select a column in priority order
-          let col;
-          if (options[0].length > 0) {
-              col = options[0][Math.floor(Math.random() * options[0].length)];
-          } else if (options[1].length > 0) {
-              col = options[1][Math.floor(Math.random() * options[1].length)];
-          } else if (options[2].length > 0) {
-              col = options[2][Math.floor(Math.random() * options[2].length)];
-          } else if (options[3].length > 0) {
-              col = options[3][Math.floor(Math.random() * options[3].length)];
-          }
-
-          // highlight the selected cell
-          highlightCell(grid[0][col].cx, grid[0][col].cy);
-
-          // set the delay
-          timeComp = DELAY_COMP;
       }
 
       function highlightCell(x, y) {
@@ -436,7 +330,7 @@
           // highlight the first unoccupied cell
           for (let i = GRID_ROWS - 1; i >= 0; i--) {
               if (grid[i][col].owner == null) {
-                  grid[i][col].highlight = playersTurn;
+                  grid[i][col].highlight = player1Turn;
                   return grid[i][col];
               }
           }
@@ -444,19 +338,20 @@
       }
 
       function highlightGrid(/** @type {MouseEvent} */ ev) {
-          if (!playersTurn || gameOver) {
+          if (gameOver) {
               return;
           }
           highlightCell(ev.clientX, ev.clientY);
       }
 
       function newGame() {
-          playersTurn = Math.random() < 0.5;
+          player1Turn = Math.random() < 0.5;
           gameOver = false;
           gameTied = false;
           createGrid();
       }
 
+      //used to update when the cell is clicked.
       function selectCell() {
           let highlighting = false;
           OUTER: for (let row of grid) {
@@ -464,7 +359,7 @@
                   if (cell.highlight != null) {
                       highlighting = true;
                       cell.highlight = null;
-                      cell.owner = playersTurn;
+                      cell.owner = player1Turn;
                       if (checkWin(cell.row, cell.col)) {
                           gameOver = true;
                       }
@@ -498,7 +393,7 @@
 
           // switch the player if no game over
           if (!gameOver) {
-              playersTurn = !playersTurn;
+              player1Turn = !player1Turn;
           }
       }
 
@@ -509,6 +404,7 @@
           canv.width = width;
           margin = MARGIN * Math.min(height, width);
           newGame();
+
     }
 
 
