removed unneccessary variable

--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -110,7 +110,7 @@
       var ctx = canv.getContext("2d");
 
       // game variables
-      var gameOver, gameTied, grid = [], player1Turn, timeComp;
+      var gameOver, gameTied, grid = [], player1Turn;
 
       // dimensions
       var height, width, margin;
